@startuml
skinparam classAttributeIconSize 0
top to bottom direction
interface AuditFlowRelationMapper {
}
class AuditFlowRelationController {
+list(AuditFlowRelationForm):List<AuditFlowRelation>
}


interface AuditFlowRelationService {
+ save(AuditFlowRelation):AuditFlowRelation
+ getById(Long):AuditFlowRelation
+ getByIds(List<Long>):List<AuditFlowRelation>
+ deleteById(Long):Boolean
+ list(AuditFlowRelationForm):List<AuditFlowRelation>
+ listAuditBeingByCurrentUser(CurrentUserQuery):List<AuditFlowRelation>
+ page(AuditFlowRelationForm,PageQuery):PageInfo<AuditFlowRelation>
+ batchSave(List<AuditFlowRelation>):List<AuditFlowRelation>
+ listAuditBeingOrderIdsByCurrentUser():List<Long>
+ generateAuditFlowRelation():MaterialAuditRelationGenerateResult
+ processAuditFlowRelation():MaterialAuditRelationResult
}


class AuditFlowServiceRelationImpl {
+ save(AuditFlowRelation):AuditFlowRelation
+ getById(Long):AuditFlowRelation
+ getByIds(List<Long>):List<AuditFlowRelation>
+ deleteById(Long):Boolean
+ list(AuditFlowRelationForm):List<AuditFlowRelation>
+ listAuditBeingByCurrentUser(CurrentUserQuery):List<AuditFlowRelation>
+ page(AuditFlowRelationForm,PageQuery):PageInfo<AuditFlowRelation>
+ batchSave(List<AuditFlowRelation>):List<AuditFlowRelation>
+ listAuditBeingOrderIdsByCurrentUser():List<Long>
+ generateAuditFlowRelation():MaterialAuditRelationGenerateResult
+ processAuditFlowRelation():MaterialAuditRelationResult
}


class AuditFlowRelation {
- Long id
- Long stockId
- Long orderId
- Integer auditStatus
- Date auditTime
- Long auditUserId
- Long deptId
- Integer type
- Integer enable
- Integer currentAuditLevel
}

class BaseEntity {
- Date createTime
- Date updateTime
- Integer delFlag
}

interface AuditFlowService{
+ getByCondition(AuditFlowForm):AuditFlow
}
interface AuditFlowDetailService{
+ list(AuditFlowDetailForm):List<AuditFlowDetail>
}
interface AuditFlowDetailRelationService{
+ listAuditBeingDetail(RelationForm):List<DetailRelation>
}

interface AuditFlowRelationMapper {
}
AuditFlowRelationController ..> AuditFlowRelationService
AuditFlowRelationController ..> AuditFlowRelation
AuditFlowRelationService <|.. AuditFlowServiceRelationImpl
BaseEntity <|-- AuditFlowRelation
AuditFlowServiceRelationImpl ..> AuditFlowRelationMapper
AuditFlowServiceRelationImpl ..> AuditFlowRelation
AuditFlowServiceRelationImpl ..> AuditFlowDetailService
AuditFlowServiceRelationImpl ..> AuditFlowDetailRelationService
AuditFlowServiceRelationImpl ..> AuditFlowService
AuditFlowRelationMapper.[hidden] AuditFlowServiceRelationImpl
AuditFlowRelation.[hidden] AuditFlowServiceRelationImpl
@enduml